--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -2208,7 +2208,7 @@
 												<div class="img-ware-show z">
 													<img src="{{item.picture}}"/>
 												</div>
-												<p class="ware-name" title="{{item.name}}">{{item.name}}</p>
+												<p class="ware-name" title="{{item.name}}"><a href="/web/html/anchors_preview.html?productId={{item.id}}" target="_blank">{{item.name}}</a></p>
 												<p class="ware-price">&yen; {{item.price}}</p>
 											</div>
 											<div class="page-view z">
