--- a/online-web/src/main/webapp/web/html/anchors_preview.html
+++ b/online-web/src/main/webapp/web/html/anchors_preview.html
@@ -39,7 +39,12 @@
 				   <li data-target="#carousel-example-generic" data-slide-to="1"></li>
 				</ol>
 				<div class="carousel-inner banner-carousel" role="listbox">
-				  
+				  <div class="item active">
+				    	<img src="/web/images/1.jpg" alt="广告图">
+				  </div>
+				  <div class="item">
+				    		<img src="/web/images/1.jpg" alt="广告图">
+				  </div>
 				</div>
 			</div>
 			<div class="shop-detail-wrap">
@@ -110,21 +115,21 @@
 				<div class="physician-title" style="margin-bottom: 10px;">
 					<span>商品详情</span>					
 				</div>
-				<div class="ware-detail-img">
-					<img src="/web/images/1.jpg"/>
+				<div class="ware-detail-img" style="padding: 0 10px; box-sizing: border-box;">
+					
 				</div>
 			</div>
 			<!--底部购买-->
-			<div class="bottom">
+			<div class="bottom hide">
 				<div class="slide-bottom">
 					<div class="left-bottom z">
 						<ul>
 							<li>
-								<img src="/web/images/1.jpg"/>
+								<img src="/web/images/service.png"/>
 								<p>客服</p>
 							</li>
 							<li style="margin-right: 0;">
-								<img src="/web/images/1.jpg"/>
+								<img src="/web/images/buy_car.png"/>
 								<p>购物车</p>
 							</li>
 						</ul>
