购物车列表页，底部区域空状态隐藏。空状态点击挑好货跳转商品首页

--- a/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
@@ -71,7 +71,7 @@
 
 <!-- 底部开始 -->
 <div class="hidden_field" style="display:none;"></div>
-<div class="payment-bar" style="displays:none;">
+<div class="payment-bar">
     <div class="all-checkbox"><input type="checkbox" class="check goods-check" id="AllCheck"
                                      style="margin-left:.26rem;"/>全选
     </div>
@@ -117,7 +117,7 @@
     <div class="vacancy">
         <img src="/xcview/images/soldout.png" alt=""/>
         <div class="vacancy-cen">您的购物车空空如也，先去挑选心爱的好货吧~</div>
-        <div class="vacancy-btn">挑好货</div>
+        <div class="vacancy-btn" onclick="location.href ='/xcview/html/shop/shop.html'">挑好货</div>
     </div>
     <div class="main_center" id="shop_recommend_product_ul">
     </div>
