[feat]订单确认页面返回按键动作

--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -534,7 +534,7 @@
 		}else{
 			//确认下单逻辑
 			
-			window.location = "/xcview/html/shop/confirm_order.html?skuId="+skuId+"&quantity="+quantity;
+			window.location = "/xcview/html/shop/confirm_order.html?skuId="+skuId+"&quantity="+quantity+"&productId="+productId;
 		}
     });
 	// 点击详情背景色
