--- a/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
+++ b/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
@@ -32,7 +32,7 @@
 	<!-- 头部区域开始 -->
 	<header>
 		<div class="header">
-			<div class="return" onclick="location.href ='/xcview/html/shop/commodity_details.html'">
+			<div class="return" onclick="location.href='javascript:history.go(-1)'">
 				<img src="/xcview/images/backicon.png" alt="" class="">
 			</div>
 			<div class="title">确认订单</div>
