确认订单页--添加跳转地址管理页面。。地址管理页面，点击返回修改中

--- a/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
+++ b/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
@@ -43,7 +43,7 @@
 
 	<!-- 选择地址开始 -->
 	<div class="select_address">
-		<div class="select_address_main">
+		<div class="select_address_main" onclick="location.href ='/xcview/html/address.html'">
 			<div class="no_address" style="display: none;">
 				<img src="/xcview/images/shop/location.png" alt="" class="location" />
 				<div class="addition">还没有收货地址，<span>去添加</span></div>
