--- a/wechat/src/main/webapp/xcview/html/address.html
+++ b/wechat/src/main/webapp/xcview/html/address.html
@@ -167,7 +167,7 @@
 	-->
 	
 	<div class="fixed_top">
-        <div class="address_return"></div>
+        <div class="address_return" onclick="isLoginJump()"></div>
   		<div class="dl">地址管理</div>
     </div>
     <!-- 地址管理开始 -->
