商品预览轮播，二维码

--- a/online-web/src/main/webapp/web/html/anchors_preview.html
+++ b/online-web/src/main/webapp/web/html/anchors_preview.html
@@ -35,16 +35,10 @@
 			<!--轮播图-->
 			<div id="carousel-example-generic" class="carousel slide banner-wrap" data-ride="carousel">
 				<ol class="carousel-indicators banner-indicators">
-				   <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-				   <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+				  
 				</ol>
 				<div class="carousel-inner banner-carousel" role="listbox">
-				  <div class="item active">
-				    	<img src="/web/images/1.jpg" alt="广告图">
-				  </div>
-				  <div class="item">
-				    		<img src="/web/images/1.jpg" alt="广告图">
-				  </div>
+				
 				</div>
 			</div>
 			<div class="shop-detail-wrap">
@@ -120,7 +114,7 @@
 				</div>
 			</div>
 			<!--底部购买-->
-			<div class="bottom hide">
+			<div class="bottom">
 				<div class="slide-bottom">
 					<div class="left-bottom z">
 						<ul>
@@ -152,11 +146,15 @@
 				</div>
 				<p class="wechat-tip">微信“扫一扫”立即购买</p>
 				<div class="wechat-data">
-					<img src="/web/images/sideWeixin.png"/>
+					<!--<img src="/web/images/sideWeixin.png"/>-->
 				</div>
 			</div>
 		<script src="/web/js/jquery-1.12.1.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" src="/web/js/artTemplate.js"></script>
+		<!--动态生成二维码-->
+		<script src="/web/js/jquery.qrcode.js" type="text/javascript" charset="utf-8"></script>
+		<script src="/web/js/utf.js" type="text/javascript" charset="utf-8"></script>
+		<!--动态生成二维码-->
 		<script src="/web/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>		
 		<script src="/web/js/common/common.js" type="text/javascript" charset="UTF-8"></script>		
 		<script src="/web/js/common_msg.js" type="text/javascript" charset="UTF-8"></script>
