--- a/wechat/src/main/webapp/xcview/html/shop/order_center.html
+++ b/wechat/src/main/webapp/xcview/html/shop/order_center.html
@@ -85,21 +85,31 @@
 			{{each items as item i}}
 		<div class="indent_list">
 			<div class="indent_list_title">
+				{{if item.doctorId != null}}
 				<div class="tilte">
-					<img src="/xcview/images/touxiang.png" alt="" class="head_portrait" />
-					林超岱医师推荐
+					<img src="{{item.doctorHeadPortrait}}" alt="" class="head_portrait" />
+					{{item.doctorName}}医师推荐
 				</div>
+				{{/if}}
 				<!-- 多种状态 -->
 				{{if item.status == 'PENDING_PAYMENT'}}
-				<div class="payment_operation">等待买家付款</div>
+				<div class="payment_operation">等待付款</div>
 				{{else if item.status == 'PENDING_REVIEW'}}
-				<div class="payment_operation">买家已付款</div>
+				<div class="payment_operation">等待审核</div>
+				{{else if item.status == 'PENDING_SHIPMENT'}}
+				<div class="payment_operation">等待发货</div>
 				{{else if item.status == 'SHIPPED'}}
-				<div class="payment_operation">卖家已发货</div>
+				<div class="payment_operation">已发货</div>
+				{{else if item.status == 'RECEIVED'}}
+				<div class="payment_operation">已收货</div>
 				{{else if item.status == 'COMPLETED'}}
-				<div class="payment_operation">交易成功</div>
+				<div class="payment_operation">已完成</div>
+				{{else if item.status == 'FAILED'}}
+				<div class="payment_operation">已失败</div>
 				{{else if item.status == 'CANCELED'}}
-				<div class="payment_operation">交易关闭</div>
+				<div class="payment_operation">已取消</div>
+				{{else if item.status == 'DENIED'}}
+				<div class="payment_operation">已拒绝</div>
 				{{/if}}
 			</div>
 			<div class="main_product_details">
@@ -109,7 +119,7 @@
 					<div class="product_details_center">
 						<div class="title"><span>{{orderItem.name}}</span></div>
 						<div class="pack">
-							1盒10包装；白色（库存{{orderItem.sku.stock}}件）
+							{{orderItem.sku.specifications}}（库存{{orderItem.sku.stock}}件）
 						</div>
 						<div class="total_prices">
 							<div class="price_yuan" >
