--- a/wechat/src/main/webapp/xcview/html/shop/shop-logistics.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop-logistics.html
@@ -17,7 +17,6 @@
 		</script>
 	</head>
 	
-	
 	<body>
 		<div class="wp">
 			<div class="header-wrap">			
@@ -97,23 +96,10 @@
 				</div>
 			</div>
 		</div>
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-
+	<script type="text/javascript" src="/xcview/js/common/jquery-2.1.4.min.js"></script>
 	<script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
-	<script type="text/javascript" src="/xcview/js/common/common.js?v=wechat_1.1.1"></script>
+	<script type="text/javascript" src="/xcview/js/common/common.js"></script>
 	<script type="text/javascript" src="/xcview/js/common/template.js"></script>   <!--模板引入-->
-	</body>
+	<script type="text/javascript" src="/xcview/js/shop/shop-logistics.js"></script>
+</body>
 </html>
