首页列表--推荐icon修改

--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -107,7 +107,7 @@
 		<div class="option">
 			<ul>
 				<li class="option_recommend default_click">
-					<img src="/xcview/images/shop/hottest.png" alt="" />推荐
+					<img src="/xcview/images/shop/recommend.png" alt="" />推荐
 				</li>
 				<li class="option_newest">
 					<img src="/xcview/images/shop/newests.png" alt="" />最新
@@ -281,7 +281,7 @@
 			$(".option_recommend").removeClass("default_click");
 			$(".option_newest img").attr("src","/xcview/images/shop/newest.png");
 			$(".option_recommend").removeClass("default_click");  //推荐
-			$(".option_recommend img").attr("src","/xcview/images/shop/hottests.png");  //由高到低
+			$(".option_recommend img").attr("src","/xcview/images/shop/recommends.png");  //推荐
 			$(".option_hottest").removeClass("default_click");  //最热
 			$(".option_hottest img").attr("src","/xcview/images/shop/hottests.png");
 			$(".option_newest").removeClass("option_recommend_width");
@@ -299,7 +299,7 @@
 			$(".option_newest").removeClass("default_click");  //最新
 			$(".option_newest img").attr("src","/xcview/images/shop/newests.png");
 			$(".option_recommend").addClass("default_click");  //推荐
-			$(".option_recommend img").attr("src","/xcview/images/shop/hottest.png");
+			$(".option_recommend img").attr("src","/xcview/images/shop/recommend.png");
 			$(".option_hottest").removeClass("default_click");  //最热
 			$(".option_hottest img").attr("src","/xcview/images/shop/hottests.png");
 			$(".option_newest").removeClass("option_recommend_width");
@@ -317,7 +317,7 @@
 			$(".option_newest").removeClass("default_click");  //最新
 			$(".option_newest img").attr("src","/xcview/images/shop/newests.png");
 			$(".option_recommend").removeClass("default_click");  //推荐
-			$(".option_recommend img").attr("src","/xcview/images/shop/hottests.png");
+			$(".option_recommend img").attr("src","/xcview/images/shop/recommends.png");
 			$(".option_hottest").addClass("default_click");  //最热
 			$(".option_hottest img").attr("src","/xcview/images/shop/hottest.png");
 			$(".option_newest").removeClass("option_recommend_width");
@@ -335,7 +335,7 @@
 			$(".option_newest").removeClass("default_click");  //最新
 			$(".option_newest img").attr("src","/xcview/images/shop/newests.png");
 			$(".option_recommend").removeClass("default_click");  //推荐
-			$(".option_recommend img").attr("src","/xcview/images/shop/hottests.png");
+			$(".option_recommend img").attr("src","/xcview/images/shop/recommends.png");
 			$(".option_hottest").removeClass("default_click");  //最热
 			$(".option_hottest img").attr("src","/xcview/images/shop/hottests.png");
 			$(".low_to_high").show();
@@ -352,7 +352,7 @@
 			$(".option_newest").removeClass("default_click");  //最新
 			$(".option_newest img").attr("src","/xcview/images/shop/newests.png");
 			$(".option_recommend").removeClass("default_click");  //推荐
-			$(".option_recommend img").attr("src","/xcview/images/shop/hottests.png");
+			$(".option_recommend img").attr("src","/xcview/images/shop/recommends.png");
 			$(".option_hottest").removeClass("default_click");  //最热
 			$(".option_hottest img").attr("src","/xcview/images/shop/hottests.png");
 			$(".low_to_high").hide();
@@ -370,7 +370,7 @@
 			$(".option_newest").removeClass("default_click");  //最新
 			$(".option_newest img").attr("src","/xcview/images/shop/newests.png");
 			$(".option_recommend").removeClass("default_click");  //推荐
-			$(".option_recommend img").attr("src","/xcview/images/shop/hottests.png");
+			$(".option_recommend img").attr("src","/xcview/images/shop/recommends.png");
 			$(".option_hottest").removeClass("default_click");  //最热
 			$(".option_hottest img").attr("src","/xcview/images/shop/hottests.png");
 			$(".low_to_high").show();
