[feat]下单页面接口联调

--- a/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
+++ b/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
@@ -67,103 +67,103 @@
 	
 	<!-- 中间内容开始 -->
 	<div class="indent">
-		<div class="indent_list">
-			<div class="tilte">
-				<img src="/xcview/images/touxiang.png" alt="" class="head_portrait" />
-				林超岱医师推荐
-			</div>
-			<div class="main_product_details">
-				<div class="product_details">
-					<img src="/xcview/images/xianxia_03.jpg" alt="" class="surface_plot" />
-					<div class="product_details_center">
-						<div class="title"><h4>正宗老北京足贴买2送1买3送2一盒50贴老北京足贴</h4></div>
-						<div class="pack">
-							1盒10包装；白色（库存10件）
-						</div>
-						<div class="total_prices">
-							<div class="price_yuan" >
-								<div class="yuan">￥<span>110.01</span></div>
-								<div class="number"><strong>x<span>3</span></strong></div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="product_details">
-					<img src="/xcview/images/xianxia_03.jpg" alt="" class="surface_plot" />
-					<div class="product_details_center">
-						<div class="title"><h4>正宗老北京足贴买2送1买3送2一盒50贴老北京足贴</h4></div>
-						<div class="pack">
-							1盒10包装；白色（库存10件）
-						</div>
-						<div class="total_prices">
-							<div class="price_yuan" >
-								<div class="yuan">￥<span>100.01</span></div>
-								<div class="number"><strong>x<span>2</span></strong></div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="zongjia"></div>
+		<!--<div class="indent_list">-->
+			<!--<div class="tilte">-->
+				<!--<img src="/xcview/images/touxiang.png" alt="" class="head_portrait" />-->
+				<!--林超岱医师推荐-->
+			<!--</div>-->
+			<!--<div class="main_product_details">-->
+				<!--<div class="product_details">-->
+					<!--<img src="/xcview/images/xianxia_03.jpg" alt="" class="surface_plot" />-->
+					<!--<div class="product_details_center">-->
+						<!--<div class="title"><h4>正宗老北京足贴买2送1买3送2一盒50贴老北京足贴</h4></div>-->
+						<!--<div class="pack">-->
+							<!--1盒10包装；白色（库存10件）-->
+						<!--</div>-->
+						<!--<div class="total_prices">-->
+							<!--<div class="price_yuan" >-->
+								<!--<div class="yuan">￥<span>110.01</span></div>-->
+								<!--<div class="number"><strong>x<span>3</span></strong></div>-->
+							<!--</div>-->
+						<!--</div>-->
+					<!--</div>-->
+				<!--</div>-->
+				<!--<div class="product_details">-->
+					<!--<img src="/xcview/images/xianxia_03.jpg" alt="" class="surface_plot" />-->
+					<!--<div class="product_details_center">-->
+						<!--<div class="title"><h4>正宗老北京足贴买2送1买3送2一盒50贴老北京足贴</h4></div>-->
+						<!--<div class="pack">-->
+							<!--1盒10包装；白色（库存10件）-->
+						<!--</div>-->
+						<!--<div class="total_prices">-->
+							<!--<div class="price_yuan" >-->
+								<!--<div class="yuan">￥<span>100.01</span></div>-->
+								<!--<div class="number"><strong>x<span>2</span></strong></div>-->
+							<!--</div>-->
+						<!--</div>-->
+					<!--</div>-->
+				<!--</div>-->
+			<!--</div>-->
+			<!--<div class="zongjia"></div>-->
 
-			<div class="express">
-				<div class="freight"><strong>运费</strong></div>
-				<div class="express_price"><strong>￥<span>10.00</span></strong></div>
-			</div>
+			<!--<div class="express">-->
+				<!--<div class="freight"><strong>运费</strong></div>-->
+				<!--<div class="express_price"><strong>￥<span>10.00</span></strong></div>-->
+			<!--</div>-->
 
-			<div class="BBS">
-				<div class="message"><strong>买家留言：</strong><input type="text" placeholder="给商家留言" /></div>
-			</div>
-		</div>
-		<div class="indent_list">
-			<div class="tilte">
-				<img src="/xcview/images/touxiang.png" alt="" class="head_portrait" />
-				林超岱医师推荐
-			</div>
-			<div class="main_product_details">
-				<div class="product_details">
-					<img src="/xcview/images/xianxia_03.jpg" alt="" class="surface_plot" />
-					<div class="product_details_center">
-						<div class="title"><h4>正宗老北京足贴买2送1买3送2一盒50贴老北京足贴</h4></div>
-						<div class="pack">
-							1盒10包装；白色（库存10件）
-						</div>
-						<div class="total_prices">
-							<div class="price_yuan" >
-								<div class="yuan">￥<span>110.01</span></div>
-								<div class="number"><strong>x<span>3</span></strong></div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="product_details">
-					<img src="/xcview/images/xianxia_03.jpg" alt="" class="surface_plot" />
-					<div class="product_details_center">
-						<div class="title"><h4>正宗老北京足贴买2送1买3送2一盒50贴老北京足贴</h4></div>
-						<div class="pack">
-							1盒10包装；白色（库存10件）
-						</div>
-						<div class="total_prices">
-							<div class="price_yuan" >
-								<div class="yuan">￥<span>100.01</span></div>
-								<div class="number"><strong>x<span>3</span></strong></div>
-							</div>
-						</div>
-					</div>
-				</div>
+			<!--<div class="BBS">-->
+				<!--<div class="message"><strong>买家留言：</strong><input type="text" placeholder="给商家留言" /></div>-->
+			<!--</div>-->
+		<!--</div>-->
+		<!--<div class="indent_list">-->
+			<!--<div class="tilte">-->
+				<!--<img src="/xcview/images/touxiang.png" alt="" class="head_portrait" />-->
+				<!--林超岱医师推荐-->
+			<!--</div>-->
+			<!--<div class="main_product_details">-->
+				<!--<div class="product_details">-->
+					<!--<img src="/xcview/images/xianxia_03.jpg" alt="" class="surface_plot" />-->
+					<!--<div class="product_details_center">-->
+						<!--<div class="title"><h4>正宗老北京足贴买2送1买3送2一盒50贴老北京足贴</h4></div>-->
+						<!--<div class="pack">-->
+							<!--1盒10包装；白色（库存10件）-->
+						<!--</div>-->
+						<!--<div class="total_prices">-->
+							<!--<div class="price_yuan" >-->
+								<!--<div class="yuan">￥<span>110.01</span></div>-->
+								<!--<div class="number"><strong>x<span>3</span></strong></div>-->
+							<!--</div>-->
+						<!--</div>-->
+					<!--</div>-->
+				<!--</div>-->
+				<!--<div class="product_details">-->
+					<!--<img src="/xcview/images/xianxia_03.jpg" alt="" class="surface_plot" />-->
+					<!--<div class="product_details_center">-->
+						<!--<div class="title"><h4>正宗老北京足贴买2送1买3送2一盒50贴老北京足贴</h4></div>-->
+						<!--<div class="pack">-->
+							<!--1盒10包装；白色（库存10件）-->
+						<!--</div>-->
+						<!--<div class="total_prices">-->
+							<!--<div class="price_yuan" >-->
+								<!--<div class="yuan">￥<span>100.01</span></div>-->
+								<!--<div class="number"><strong>x<span>3</span></strong></div>-->
+							<!--</div>-->
+						<!--</div>-->
+					<!--</div>-->
+				<!--</div>-->
 
-			</div>
-			<div class="zongjia"></div>
+			<!--</div>-->
+			<!--<div class="zongjia"></div>-->
 
-			<div class="express">
-				<div class="freight"><strong>运费</strong></div>
-				<div class="express_price"><strong>￥<span>10.00</span></strong></div>
-			</div>
+			<!--<div class="express">-->
+				<!--<div class="freight"><strong>运费</strong></div>-->
+				<!--<div class="express_price"><strong>￥<span>10.00</span></strong></div>-->
+			<!--</div>-->
 
-			<div class="BBS">
-				<div class="message"><strong>买家留言：</strong><input type="text" placeholder="给商家留言" /></div>
-			</div>
-		</div>
+			<!--<div class="BBS">-->
+				<!--<div class="message"><strong>买家留言：</strong><input type="text" placeholder="给商家留言" /></div>-->
+			<!--</div>-->
+		<!--</div>-->
 
 		<!-- 优惠券开始
 		<div class="coupon">
@@ -180,22 +180,22 @@
 		</div>优惠券结束 -->
 		
 		<!-- 计算总价开始 -->
-		<div class="total_price">
-			<div class="total_price_main">
-				<div class="total last">
-					<div class="totals">商品总价</div>
-					<div class="totals_yuan">￥<span>1644.00</span></div>
-				</div>
-				<div class="carriage last">
-					<div class="carriages">运费</div>
-					<div class="carriage_yuan">+￥10.00</div>
-				</div>
-				<!-- <div class="discount_amount last" style="display: none;">
-					<div class="discount_amounts">优惠金额</div>
-					<div class="discount_amount_yuan">-￥10.00</div>
-				</div> -->
-			</div>
-		</div>
+		<!--<div class="total_price">-->
+			<!--<div class="total_price_main">-->
+				<!--<div class="total last">-->
+					<!--<div class="totals">商品总价</div>-->
+					<!--<div class="totals_yuan">￥<span class="totals_yuan_rmb">1644.00</span></div>-->
+				<!--</div>-->
+				<!--<div class="carriage last">-->
+					<!--<div class="carriages">运费</div>-->
+					<!--<div class="carriage_yuan">￥<span class="carriage_yuan_rmb">10.00</span></div>-->
+				<!--</div>-->
+				<!--&lt;!&ndash; <div class="discount_amount last" style="display: none;">-->
+					<!--<div class="discount_amounts">优惠金额</div>-->
+					<!--<div class="discount_amount_yuan">-￥10.00</div>-->
+				<!--</div> &ndash;&gt;-->
+			<!--</div>-->
+		<!--</div>-->
 		<!-- 计算总价结束 -->
 
 	</div>
@@ -205,7 +205,7 @@
 	<div class="footer_height"></div>
 	<div class="footer">
 		<div class="footer_main">
-			<div class="summation"><span class="summations">合计</span><span class="yuan">￥<span>1648.00</span></span></div>
+			<div class="summation"><span class="summations">合计</span><span class="yuan">￥<span class="amountPayable"></span></span></div>
 			<div class="submit_order">提交订单</div>
 		</div>
 	</div>
