--- a/wechat/src/main/webapp/xcview/html/shop/method.html
+++ b/wechat/src/main/webapp/xcview/html/shop/method.html
@@ -29,7 +29,7 @@
 	<!--头部搜索开始-->
 	<header>
 		<div class="header">
-			<div class="header_return"  onclick="">
+			<div class="header_return"   onclick="location.href ='/xcview/html/shop/order_center.html'">
 				<img src="/xcview/images/back icon.png">
 			</div>
 			<div class="header_title">选择支付方式</div>
