修改购物车返回事件----影响问题（其他页面进入购物车，返回未做测试哪）

--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -13,7 +13,7 @@
 <meta name="description" content="" />
 
 <!--手机嵌入模板-->
-<script type="text/javascript" src="/xcview/js/common/layout.js?version=e2b9d5cdbd"></script>
+<script type="text/javascript" src="/xcview/js/common/layout.js?version=e2b9d5cdbd&version=e2b9d5cdbd"></script>
 <script>
 	// 判断横屏展示时的状态
 	window.onorientationchange=function(){
@@ -24,20 +24,20 @@
 	    }
 	}	
 </script>
-<link rel="stylesheet" href="/xcview/js/shop/big_picture/css/demo.css?version=c94301827a">
-<link rel="stylesheet" href="/xcview/js/shop/big_picture/css/iconfont.css?version=46473f4fea">
-<link rel="stylesheet prefetch" href="/xcview/js/shop/big_picture/css/photoswipe.css?version=7dc0df1071">
-<link rel="stylesheet prefetch" href="/xcview/js/shop/big_picture/css/default-skin/default-skin.css?version=426e8908d7">
+<link rel="stylesheet" href="/xcview/js/shop/big_picture/css/demo.css?version=c94301827a&version=c94301827a">
+<link rel="stylesheet" href="/xcview/js/shop/big_picture/css/iconfont.css?version=46473f4fea&version=46473f4fea">
+<link rel="stylesheet prefetch" href="/xcview/js/shop/big_picture/css/photoswipe.css?version=7dc0df1071&version=7dc0df1071">
+<link rel="stylesheet prefetch" href="/xcview/js/shop/big_picture/css/default-skin/default-skin.css?version=426e8908d7&version=426e8908d7">
 
 
 
-<link rel="stylesheet" href="/xcview/css/shop/jquery.spinner.css?version=b93061713f" /><!-- 点击数量加减 -->
-<link rel="stylesheet" href="/xcview/css/shop/commodity_details.css?version=3199cb3149" />
+<link rel="stylesheet" href="/xcview/css/shop/jquery.spinner.css?version=b93061713f&version=b93061713f" /><!-- 点击数量加减 -->
+<link rel="stylesheet" href="/xcview/css/shop/commodity_details.css?version=3199cb3149&version=b7783fd247" />
 <!-- 轮播引入 -->
-<link rel='stylesheet prefetch' href='/xcview/css/shop/ckg/photoswipe.css?version=9200f216e3'>
-<link rel='stylesheet prefetch' href='/xcview/css/shop/ckg/default-skin/default-skin.css?version=c66976ff72'>
+<link rel='stylesheet prefetch' href='/xcview/css/shop/ckg/photoswipe.css?version=9200f216e3&version=9200f216e3'>
+<link rel='stylesheet prefetch' href='/xcview/css/shop/ckg/default-skin/default-skin.css?version=c66976ff72&version=c66976ff72'>
 <link rel="stylesheet" href="/xcview/css/shop/ckg/swiper.min.css">
-<link rel="stylesheet" type="text/css" href="/xcview/css/popups.css?version=274f363430"/> <!-- 公用弹框 -->
+<link rel="stylesheet" type="text/css" href="/xcview/css/popups.css?version=274f363430&version=274f363430"/> <!-- 公用弹框 -->
 <!-- 轮播引入 -->
 <style>
 	/*隐藏轮播点击查看大图效果显示的第几张数字*/
@@ -436,19 +436,19 @@
 </body>
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script> 
-<script type="text/javascript" src="/xcview/js/common/common.js?version=ed749a7870"></script> 
+<script type="text/javascript" src="/xcview/js/common/common.js?version=ed749a7870&version=276907c86a"></script> 
 
-<script type="text/javascript" src="/xcview/js/common/template.js"></script>   <!--模板引入-->
+<script type="text/javascript" src="/xcview/js/common/template.js?version=dd622e58c9"></script>   <!--模板引入-->
 
 <!-- 滑动焦点图引入-->	
-<script src='/xcview/js/shop/ckg/big_img.js?version=35a3532c5b'></script>
+<script src='/xcview/js/shop/ckg/big_img.js?version=35a3532c5b&version=35a3532c5b'></script>
 <script src='/xcview/js/shop/ckg/photoswipe.min.js'></script>
 <script src='/xcview/js/shop/ckg/photoswipe-ui-default.min.js'></script>
 <script src="/xcview/js/shop/ckg/bigImg.js?version=ca4b805048"></script>
 <script src="/xcview/js/shop/ckg/swiper.min.js"></script>
 
-<script type="text/javascript" src="/xcview/js/shop/commodity_details.js"></script>
-<script type="text/javascript" src="/xcview/js/share/share.js"></script>
+<script type="text/javascript" src="/xcview/js/shop/commodity_details.js?version=21a43862ba"></script>
+<script type="text/javascript" src="/xcview/js/share/share.js?version=82d2bc907e"></script>
 <!-- 滑动焦点图引入-->	
 <script>  
     var swiper = new Swiper('.swiper-container', {
@@ -458,9 +458,9 @@
 </script>
 <!-- 滑动焦点图end-->
 
-<script type="text/javascript" src="/xcview/js/common/popups.js?version=ac575e6012"></script>  <!-- 公用弹框 -->
+<script type="text/javascript" src="/xcview/js/common/popups.js?version=ac575e6012&version=ac575e6012"></script>  <!-- 公用弹框 -->
 
-<script type="text/javascript" src="/xcview/js/shop/jquery.spinner.js?version=a3e4e4c603"></script><!-- 点击数量引入 -->
+<script type="text/javascript" src="/xcview/js/shop/jquery.spinner.js?version=a3e4e4c603&version=a3e4e4c603"></script><!-- 点击数量引入 -->
 <!-- 数量区域 -->
 <script>
 	// 点击数量加减
@@ -627,7 +627,7 @@
 </script>
 
 <script src="/xcview/js/shop/big_picture/js/jquery.min.js"></script>
-<script src="/xcview/js/shop/big_picture/js/photoswipe.js?version=a8d26ff349"></script>
+<script src="/xcview/js/shop/big_picture/js/photoswipe.js?version=a8d26ff349&version=a8d26ff349"></script>
 <script src="/xcview/js/shop/big_picture/js/photoswipe-ui-default.min.js"></script>
 <script type="text/javascript">
 	var initPhotoSwipeFromDOM = function(gallerySelector) {
@@ -877,4 +877,5 @@
     }
 </script>
 </html>
+
 
