--- a/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
@@ -48,7 +48,8 @@
 <!-- 头部区域开始 -->
 <header>
     <div class="header">
-        <div class="return" onclick="location.href ='/xcview/html/shop/commodity_details.html'">
+        <!--<div class="return" onclick="location.href ='/xcview/html/shop/commodity_details.html?productId=' + id +'">-->
+        <div class="return" onclick="javascript:history.go(-1);">
             <img src="/xcview/images/backicon.png" alt="" class="">
         </div>
         <div class="title">购物车</div>
