--- a/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
+++ b/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
@@ -211,6 +211,7 @@
 </body>
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script> 
+<script type="text/JavaScript" src="//res.wx.qq.com/open/js/jweixin-1.2.0.js"></script> 
 <script type="text/javascript" src="/xcview/js/common/common.js"></script> 
 <script type="text/javascript" src="/xcview/js/common/template.js"></script>   <!--模板引入-->
 <script type="text/javascript" src="/xcview/js/shop/all_evaluation.js"></script>
