商品详情添加全部评价为空的状态

--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -185,6 +185,7 @@
 			{{/each}}
 			</script>
 		</div>
+		
 	</div>
 	<!-- 医师推荐结束 -->
 
@@ -296,6 +297,7 @@
 
 	    </div>
 	</div>
+	<div class="no_evaluation">暂无评价</div>
 	</div>
 	<!-- 评价结束 -->
 
